<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_toolbar">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="224dp"
                android:layout_height="224dp"
                android:layout_gravity="center"
                android:background="@drawable/roundedimage"
                android:contentDescription="@string/bgimg"
                android:src="@drawable/bg_image" />

            <TextView
                android:id="@+id/confidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/akurasi"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/notFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/batik_tidak_diketahui"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnAudio"
                android:textAllCaps="false"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:background="@drawable/rounded_button"
                android:drawableStart="@drawable/ic_baseline_play_circle_filled_24"
                android:text="@string/play"/>
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-30dp"
                android:text="@string/name"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/batikName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/batik_name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/origin"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bali"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtCharacteristic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/characteristic"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/characteristic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/characteristic_desc"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtPhilosophy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/philosophy"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/philosophy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/philosophy_desc"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/take_a_motive_again"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/reactangle_button_second"
                android:text="@string/add_to_favourite"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>