<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.BatikDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingTop="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="224dp"
                android:layout_height="224dp"
                android:layout_gravity="center"
                android:background="@drawable/roundedimage"
                android:contentDescription="@string/bgimg"
                android:src="@drawable/bg_image" />

<!--            <TextView-->
<!--                android:id="@+id/confidence"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="25dp"-->
<!--                android:text="@string/akurasi"-->
<!--                android:textSize="12sp" />-->

            <TextView
                android:id="@+id/notFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/batik_tidak_diketahui"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp">

                <ImageButton
                    android:id="@+id/iv_favorite_batik"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_rect"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_favorite_border" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearAudio"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="top|end"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp">
                <ToggleButton
                    android:id="@+id/tb_audio"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:contentDescription="@string/audio"
                    android:textOff=""
                    android:textOn=""
                    android:focusable="false"
                    android:layout_gravity="right"
                    android:background="@drawable/audio_toggle"
                    android:focusableInTouchMode="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_minus45sdp"
                android:text="@string/name"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/batikName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/batik_name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/origin"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/bali"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtCharacteristic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/characteristic"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/characteristic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/characteristic_desc"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtPhilosophy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/philosophy"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/philosophy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/philosophy_desc"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkPrimary"
                android:layout_marginTop="20dp"
                android:background="@drawable/reactangle_button_second"
                android:text="@string/save_result_scan"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>